menambahkan header float dan header background

--- a/index.html
+++ b/index.html
@@ -4,12 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="script.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
+    <header>
+        <div class="header-nav">
+
+            <!-- header tittle -->
+            <div class="header-nav-tittle">
+                <h1>Travel <span>ID</span></h1>
+            </div>
     
+             <!-- header list -->
+            <div class="header-nav-list">
+                <a href="#">Home</a>
+                <a href="#">Tour</a>
+                <a href="#">Blog</a>
+                <a href="#">Content</a>
+            </div>
+              <!-- header feather -->
+            <div class="header-nav-feather">
+                <a href="#">Registry</a>
+                <a href="#">Sign In</a>
+                <a href="#" id="menu"><i data-feather="menu"></i></a>
+            </div>
+        </div>
+        <!-- header-content text-->
+        <div class="header-content">
+            <h1>World Is A Beautiful Place And We Will Show It To You</h1>
+        </div>
+
+
+        <!-- header  float-->
+         <div class="header-float">
+            <div class="header-float-content">
+                <!-- card -->
+                <div class="header-float-content-card">
+                    <h1>Location</h1>
+                    <h2>Where You Want To Go?</h2>
+                </div>
+                <!-- card -->
+                <div class="header-float-content-card">
+                    <h1>Date</h1>
+                    <h2>When It Wil Start?</h2>
+                </div>
+                <!-- card -->
+                <div class="header-float-content-card">
+                    <h1>People</h1>
+                    <h2>How Many People?</h2>
+                </div>
+            </div>
+
+            <!-- header float btn -->
+             <div class="header-float-btn">
+                <a href="#">Search Now!!</a>
+             </div>
+         </div>
+    </header>
     
 
 
