menambahkan id dan scrol behavior

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-    <header>
+    <header id="home">
         <div class="header-nav">
 
             <!-- header tittle -->
@@ -20,10 +20,10 @@
     
              <!-- header list -->
             <div class="header-nav-list">
-                <a href="#">Home</a>
-                <a href="#">Tour</a>
-                <a href="#">Blog</a>
-                <a href="#">Content</a>
+                <a href="#home">Home</a>
+                <a href="#tour">Tour</a>
+                <a href="#roadmap">Blog</a>
+                <a href="#partnership">Partnership</a>
             </div>
               <!-- header feather -->
             <div class="header-nav-feather">
@@ -66,7 +66,7 @@
     </header>
     
     <!-- card-container -->
-    <div class="card">
+    <div class="card" id="tour">
         <!-- card-content -->
         <div class="card-content">
             <h1>Explore Our Best Destination</h1>
