menambbahkan sedikit article

--- a/index.html
+++ b/index.html
@@ -114,6 +114,42 @@
         </div>
     </div>
 
+    <!-- section roadmap -->
+     <section>
+        <!-- section -->
+        <div class="header">
+            <h1>We Will Make it Easier To You</h1>
+            <p>Just Tell Us What You Want and We Will Prepared To You</p>
+        </div>
+
+
+         <!-- section content -->
+        <div class="content">
+            <img src="img/content-1.jpg" alt="">
+            <!-- number -->
+            <div class="content-article">
+                <div class="content-article-1">
+                    <h1>01</h1>
+                    <h2>Find Best Place For You</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Repellendus inventore cumque illo eius dignissimos magnam
+                        tempora, officia, recusandae placeat aperiam quidem eos nihil,
+                        expedita molestiae impedit voluptatem aliquid! Impedit nam minima eveniet nisi libero ad.
+                    </p>
+                </div>
+
+                <div class="content-article-2">
+                    <h1>02</h1>
+                    <h2>Book Your Favorite Place</h2>
+                </div>
+            </div>
+
+
+        </div>
+        
+     </section>
+
 
 
 
