--- a/index.html
+++ b/index.html
@@ -126,28 +126,50 @@
          <!-- section content -->
         <div class="content">
             <img src="img/content-1.jpg" alt="">
-            <!-- number -->
-            <div class="content-article">
+           <div class="content-article">
+                <!-- article-1 -->
                 <div class="content-article-1">
-                    <h1>01</h1>
-                    <h2>Find Best Place For You</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Repellendus inventore cumque illo eius dignissimos magnam
-                        tempora, officia, recusandae placeat aperiam quidem eos nihil,
-                        expedita molestiae impedit voluptatem aliquid! Impedit nam minima eveniet nisi libero ad.
-                    </p>
+                    <!-- number -->
+                    <div class="content-article-num">
+                        <h1>01</h1>
+                    </div>
+                    <!-- section artcile  -->
+                    <div class="content-article-text">
+                        <h1>Find Best Place To You</h1>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos
+                        architecto iure odio perferendis voluptatum, ipsa doloremque dolorem impedit deleniti
+                        </p>
+                    </div>
                 </div>
-
-                <div class="content-article-2">
-                    <h1>02</h1>
-                    <h2>Book Your Favorite Place</h2>
+                <!-- article-2 -->
+                <div class="content-article-1" id="article-mg">
+                    <!-- number -->
+                    <div class="content-article-num">
+                        <h1>02</h1>
+                    </div>
+                    <!-- section artcile  -->
+                    <div class="content-article-text">
+                        <h1>Book Your Favorite Place</h1>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium dignissimos
+                        architecto iure odio perferendis voluptatum, ipsa doloremque dolorem impedit deleniti
+                        </p>
+                    </div>
+                </div>
+                <!-- article-3 -->
+                <div class="content-article-1" id="article-mg">
+                    <!-- number -->
+                    <div class="content-article-num">
+                        <h1>03</h1>
+                    </div>
+                    <!-- section artcile  -->
+                    <div class="content-article-text">
+                        <h1 id="enjoy">Enjoy Your Trip</h1>
+                    </div>
                 </div>
             </div>
-
-
         </div>
-        
      </section>
 
 
