--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header-nav-list">
                 <a href="#home">Home</a>
                 <a href="#tour">Tour</a>
-                <a href="#roadmap">Blog</a>
+                <a href="#roadmap">Tutorial</a>
                 <a href="#partnership">Partnership</a>
             </div>
               <!-- header feather -->
@@ -172,7 +172,7 @@
         </div>
     </section>
 
-    <main>
+    <main id="roadmap">
         <div class="header">
             <h1>Why Choose Us</h1>
             <p>
